--- a/READme
+++ b/READme
@@ -1,4 +1,4 @@
-Quantatative Finance Semester 2 2021
+Quantatative Finance Semester 1 2022
 
 Requirements: python + pip 
 
@@ -6,12 +6,6 @@ Installation and Run:
 
     1. pip install -r requirements.txt
 
-    2. Download ta-library
-        2.1 Windows installation:
-	    Can download ta-lib file from internet https://www.lfd.uci.edu/~gohlke/pythonlibs/#ta-lib but all are already included in folder named "ta-lib".
-	    To install run the following command:
-            pip install ta-lib/<filename.whl> (filename corrosponds to your version of python, e.g cp39 is python 3.9)
-        2.2 Linux installation: 
-            https://sachsenhofer.io/install-ta-lib-ubuntu-server/
+    2. Download extra data (Optional) using API_Interface.py
 
     3. python momentum_algorithm.py 
